Fixed issue with subContainer spilling out Added min-height to stufyGifContainer to increase height capacity Added min-height to subContainer to allow for further height shrin

--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@
     align-items: center;
     width: 60vw;
     height: 83vh;
+    min-height: 500px;
+    min-height: 500px;
     background-color: rgb(26, 26, 26);
     border: 1px solid white;
     border-radius: 25px;
@@ -99,8 +101,8 @@
 #studyGif {
     width: 22vw;
     height: 22vw;
-    min-width: 250px;
-    min-height: 250px;
+    min-width: 200px;
+    min-height: 200px;
     margin-top: auto;
     margin-bottom: auto;
     border-radius: 10px;
@@ -114,6 +116,7 @@
     margin-top: auto;
     margin-bottom: auto;
     gap: 2vh;
+    min-height: 10px;
 }
 
 @media (orientation: portrait) {
